 ./modules/noosphere/taghmata/nixidy/manifests/prod/traefik/Ingress-argocd-ip-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: argocd-ip-root
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - argocd.noosphere.uk
      secretName: argocd-tls
